[gd_scene load_steps=2 format=2]

[ext_resource path="res://Components/sound_player/sound_player.gd" type="Script" id=1]

[node name="sound_player" type="Node"]
script = ExtResource( 1 )

[connection signal="tree_entered" from="." to="." method="_on_sound_player_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_sound_player_tree_exiting"]
